third_party/move/move-compiler-v2/tests/unit_test/test/test_and_test_only_annotation.exp

Diagnostics:
error: invalid usage of known attribute
  ┌─ tests/unit_test/test/test_and_test_only_annotation.move:6:16
  │
4 │     #[test(_a=@0x1, _b=@0x2)]
  │       ---------------------- Previously annotated here
5 │     #[test_only]
  │       --------- Function annotated as both #[test(...)] and #[test_only]. You need to declare it as either one or the other
6 │     public fun boo(_a: signer, _b: signer) { }
  │                ^^^
